dataset/local/df_validate_expose_port_22/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-expose-port-22
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: validate-expose-port-22
    kind: Dockerfile
    resources:
      - good-dockerfile
    result: pass
  - policy: validate-expose-port-22
    kind: Dockerfile
    resources:
      - bad-dockerfile
    result: fail
